--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Playground: Protocol API base URL (client-side, must be NEXT_PUBLIC_)
-PLAYGROUND_PUBLIC_PROTOCOL_API_BASE=http://localhost:8000
+PLAYGROUND_PUBLIC_PROTOCOL_API_BASE=https://dev-protocol.cournot.ai
 
 # Proxy: Upstream API for /api/proxy routes (server-side)
 UPSTREAM_API_BASE=https://dev-interface.cournot.ai/play/polymarket
