--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Playground: Protocol API base URL (client-side, must be NEXT_PUBLIC_)
-PLAYGROUND_PUBLIC_PROTOCOL_API_BASE=https://dev-protocol.cournot.ai
+# Playground: Protocol API base URL (exposed to client via next.config.mjs)
+PLAYGROUND_PUBLIC_PROTOCOL_API_BASE=http://localhost:8000
 
 # Proxy: Upstream API for /api/proxy routes (server-side)
 UPSTREAM_API_BASE=https://dev-interface.cournot.ai/play/polymarket
